Add package manager column
https://github.com/renovatebot/renovate/releases/tag/32.3.0

--- a/renovate-default.json
+++ b/renovate-default.json
@@ -18,6 +18,10 @@
       "automerge": true
     }
   ],
+  "prBodyColumns": [ "Package", "Manager", "Type", "Update", "Change", "Pending" ],
+  "prBodyDefinitions": {
+    "Manager": "{{{manager}}}"
+  },
   "regexManagers": [
     {
       "description": "Install dotnet version in github workflows",
