Disable azure pipelines manager
Workaround https://github.com/renovatebot/renovate/issues/15818#issuecomment-1217432596

--- a/renovate-default.json
+++ b/renovate-default.json
@@ -7,6 +7,10 @@
     ":rebaseStalePrs",
     ":semanticCommitsDisabled"
   ],
+  "azure-pipelines": {
+    "description": "Disable azure pipelines manager",
+    "enabled": false
+  },
   "commitMessageAction": "Bump",
   "labels": [ "dependencies" ],
   "packageRules": [
