Disable repology datasource
https://github.com/renovatebot/renovate/issues/18144

--- a/renovate-default.json
+++ b/renovate-default.json
@@ -15,6 +15,11 @@
   "labels": [ "dependencies" ],
   "packageRules": [
     {
+      "description": "Disable repology datasource",
+      "matchDatasources": [ "repology" ],
+      "enabled": false
+    },
+    {
       "description": "Group non-major update types",
       "matchUpdateTypes": [ "minor", "patch", "digest", "lockFileMaintenance" ],
       "groupName": "dependencies",
